# pydantic-extra

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: mypy.yml  release.yml  tests.yml
docs/: changes.rst  conf.py  index.rst
docs/_examples/: adb.py  change__library.py  change_library.py  db.py  enums.py  enums_annotate.py  use_default_library.py
docs/api/: adb.rst  db.rst  db_base.rst  enums.rst  index.rst  smtp.rst
docs/basic/: db_library.rst  quickstart.rst
docs/contribute/: index.rst  tools.rst
docs/ext/: comment.py
docs/ext/old_version/: __init__.py
docs/ext/old_version/locales/en/LC_MESSAGES/: old_version.po
docs/include/: epilog.rst
docs/include/api/db/: any.rst  epilog.rst  mysql.rst  sqlite.rst
docs/locales/en/LC_MESSAGES/: api.po  basic.po  changes.po  contribute.po  index.po
pydantic_extra/: __init__.py  db.py
src/pydantic_extra/: __init__.py  _db.py  adb.py  db.py  enums.py  smtp.py
tests/: test_async_db.py  test_base_db.py  test_db.py  test_enums.py  test_smtp.py
tools/: __init.py  _const.py  _docs.py  autobuild_docs.py  build_docs.py  gen_po.py  gen_pot.py  mypy.py  mypy_docs.toml  mypy_src.toml
