[build-system]
requires = [
    "setuptools>=81",
    "gitversion_simple[setuptools]~=2.0",
    "dynamic-dependencies[setuptools]~=1.0",
]

[project]
name = "pydantic-extra"
description = "Готовые модели pydantic для частых задач"
readme = "readme.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ярыкин Евгений", email = "pypi@zedzhen.ru" }
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
source = "https://github.com/zedzhen/pydantic-extra"

[dependency-groups]
test = ['pytest~=9.0']
dev = [
    'black~=26.5',
    'isort~=8.0',
    "build==1.5.*",
    "pre-commit~=4.6",
    { include-group ="requires" },
    { include-group ="db" },
    { include-group ="db_full" },
    { include-group ="adb_full" },
    { include-group ="test" },
]
requires = [
    'pydantic~=2.10',
    'typing-extensions~=4.14',
]
db = ['sqlalchemy~=2.0']
db_full = ['pymysql~=1.1,!=1.1.0']
adb_full = [
    'aiosqlite>=0.20,<0.23',
    'aiomysql~=0.3.0',
]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
minversion = "9.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.dynamic_dependencies]
require = "requires"
[tool.dynamic_dependencies.optional]
db = "db"
db_full = "db_full"
adb_full = "adb_full"
