[build-system]
requires = [
    "dynamic-dependencies[setuptools]~=1.0",
    "gitversion-simple[setuptools]>=2,<4",
    "setuptools>=81",
]

[project]
name = "pydantic-extra"
description = "Готовые модели pydantic для частых задач"
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = [ "dependencies", "optional-dependencies", "version" ]
[[project.authors]]
name = "Ярыкин Евгений"
email = "pypi@zedzhen.ru"
[project.urls]
source = "https://github.com/zedzhen/pydantic-extra"

[dependency-groups]
dev = [
    "build==1.5.*",
    "pre-commit~=4.6",
    { include-group = "test" },
]
test = [
    "pytest~=9.0",
    { include-group = "full" },
    { include-group = "requires" },
]
docs = [
    "babel~=2.18",
    "furo==2025.12.19",
    "sphinx~=9.0",
    "sphinx-deprecated-deleted~=1.1",
    "sphinx-intl~=2.3",
    "sphinx-refs-alias~=2.0",
]
adb_full = [
    "aiomysql~=0.3.0",
    "aiosqlite>=0.20,<0.23",
]
autodocs = [
    "sphinx-autobuild~=2025.8",
    { include-group = "docs" },
]
db = [ "sqlalchemy~=2.0" ]
db_full = [ "pymysql>=1.1.1,<2" ]
full = [
    { include-group = "adb_full" },
    { include-group = "db" },
    { include-group = "db_full" },
]
lints = [
    "autoflake~=2.3",
    "black~=26.5",
    "isort~=8.0",
    "pyproject-fmt~=2.25",
    { include-group = "types" },
]
requires = [
    "pydantic~=2.10",
    "typing-extensions~=4.14",
]
types = [
    "mypy~=2.1",
    "types-docutils~=0.22",
    { include-group = "db" },
    { include-group = "docs" },
    { include-group = "requires" },
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
src_paths = [ "src", "tools" ]

[tool.pyproject-fmt]
column_width = 120
indent = 4
generate_python_version_classifiers = false
table_format = "long"

[tool.pytest]
addopts = [ "--import-mode=importlib" ]
minversion = "9.0"
pythonpath = [ "src" ]
testpaths = [ "tests" ]

[tool.dynamic_dependencies]
require = "requires"
[tool.dynamic_dependencies.optional]
db = "db"
db_full = "db_full"
adb_full = "adb_full"
full = "full"

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true
remove_duplicate_keys = true
